JDK25 Optimized code